--- a/_includes/themes/the-program/post.html
+++ b/_includes/themes/the-program/post.html
@@ -41,7 +41,8 @@
 						</ul>
 					</div>
 					<div class="comment">
-					{% include JB/comments %}
+                        <script type='text/javascript' charset='utf-8' src='http://open.denglu.cc/connect/commentcode?appid=35138den8zPpaqog0wkh6RGWLG4KHA'></script>
+					<!--{% include JB/comments %}-->
 					</div>
 				</div><!-- misc-content -->
 			</div><!-- bd -->
