--- a/_includes/themes/the-program/post.html
+++ b/_includes/themes/the-program/post.html
@@ -35,9 +35,20 @@
 				</div><!-- entry-content -->
 				<div class="misc-content">
 					<div class="social">
+                        <!-- JiaThis Button BEGIN -->
+                        <div class="jiathis_style" style="overflow:hidden;zoom:1;">
+	                        <span class="jiathis_txt">分享到：</span>
+	                        <a class="jiathis_button_tsina"></a>
+	                        <a class="jiathis_button_fb"></a>
+	                        <a class="jiathis_button_twitter"></a>
+	                        <a class="jiathis_button_tsohu"></a>
+	                        <a class="jiathis_button_qzone"></a>
+	                        <a class="jiathis_button_googleplus"></a>
+	                        <a href="http://www.jiathis.com/share?uid=904756" class="jiathis jiathis_txt jtico jtico_jiathis" target="_blank">更多</a>
+                        </div>
+                        <script type="text/javascript" src="http://v2.jiathis.com/code/jia.js?uid=904756" charset="utf-8"></script>
+                        <!-- JiaThis Button END -->
 						<ul class="list-linear">
-							<li><div class="twitter-tweet"><a href="https://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-via="{{ site.author.twitter }}" data-lang="en">Tweet</a></div></li>
-							<li><div class="twitter-follow"><a href="https://twitter.com/{{ site.author.twitter }}" class="twitter-follow-button" data-show-count="false" data-lang="en"></a></div></li>
 						</ul>
 					</div>
 					<div class="comment">
